Fixed links not centered properly.

--- a/Portfolio/portfolio/css/styles.css
+++ b/Portfolio/portfolio/css/styles.css
@@ -12344,6 +12344,8 @@ nav {
 ul {
   list-style-type: none;
   text-align: center;
+  padding: 0px;
+  margin: 0px
 }
 
 .underline {
